fixed text alignment and embedded video rendering on home page

--- a/project-draft/css/draft.css
+++ b/project-draft/css/draft.css
@@ -16,6 +16,7 @@ h4 {
 .btn-primary {
     background-color: #006D04 !important;
     border-color: #006D04 !important;
+    margin-bottom: 2.5rem;
 }
 
 .btn-primary:hover {
